* Dialer: add logging capability of events that happen to a call. For this a 
  new database table was created. Allow campaign deletion to cope with the new
  table. This is required functionality for call progress events.
* Dialer: add new column calls.trunk to keep track of trunk used for outgoing
  call. Add outgoing trunk support to dialer code. This is required for planned
  functionality of trunk display of in-progress calls.
* Agent Console: use the new getchanvars request to add the list of channel
  variables to the ones available in an external URL. This allows variables set
  via custom contexts or AGIs to be used to drive external URLs.
* Dialer (ECCP): add a new request 'getchanvars'. This request lists the channel
  variables of the call currently handled by the agent.
* Agent Console: expose the Uniqueid of the linked call as an additional 
  variable for External URL.
* Login Logout: fix issue of report export displaying only a single page.
* Login Logout: add consistency checks on audit records to counter the situation
  where an abnormal termination of the dialer leaves unclosed audit records.
  Inconsistent records are now displayed as CORRUPTED instead of adding invalid
  values as if they were valid ONLINE records.
* Dialer: fix inability to record scheduled calls. Now the dialer will use a
  special context to enable recording if the campaign queue recorded calls.
* Dialer: set CALLERID(num) in OriginateResponse handler in order to ensure the
  CDR has a meaningful source field value. Fixes Elastix bug #1411.
* Trunks Used per Hour: core query method rewritten to use SQL parameters. SQL
  was reimplemented to use more efficient grouping. HTML formatting moved to 
  index.php. Trunk filter now allows report on calls from all trunks.
* Agents Connection Time: removed. This report is now essentially identical to
  Login Logout.
* Login Logout: complete rewrite. This rewrite takes advantage of the updated